@@ -12,7 +12,7 @@ tinymce.init({
 	content_css: 'css/development.css',
 	//object_resizing: false,
 	init_instance_callback: function(ed) {
-		ed.on('ObjectResized', function(e) {
+		ed.on('ObjectResizeStart ObjectResized', function(e) {
 			if (window.console) {
 				console.log(e.type, e.target, e.width, e.height);
 			}
@@ -32,7 +32,7 @@ tinymce.init({
 	content_css: 'css/development.css',
 	//object_resizing: false,
 	init_instance_callback: function(ed) {
-		ed.on('ObjectResized', function(e) {
+		ed.on('ObjectResizeStart ObjectResized', function(e) {
 			if (window.console) {
 				console.log(e.type, e.target, e.width, e.height);
 			}
